# pass_any_across_lib

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  genany.cpp  genany.h  main.cpp
